# fdflimmotion

./: .gitignore  CFigure.h  CImg.h  CMakeLists.txt  FDFLIMRepair.cpp  ICCD_noise_model.hpp  Matcher.hpp  README.md  abber-impact-tau.cpp  bg_estimator.hpp  bg_stack_estimator.hpp  displayEnergy.m  energy-minimum.cpp  evo_visualizer.hpp  fdflimmotion.cpp  feature.hpp  feature_detector.hpp  feature_high.hpp  fluo_simulator.hpp  fourier_lifetime.cpp  fourier_lifetime.cpp~  gauss_kernel.hpp  gaussian_fit.hpp  inpaint.hpp  int_estimator.hpp  lf_estimator.hpp  lifetime.cpp  lifetime.cpp~  lifetime.hpp  match_model_test.hpp  matusita.cpp  matusita.h  noise_analysis.h  phase-abber-iccd-photon-count-moving.cpp  phase-abber-iccd-photon-count.cpp  phase-iccd-photon-count.cpp  simu_spot.hpp  sin_fit.cpp  sin_fit.hpp  sin_fit_bg_exp.hpp  (+2 more)
CMakeModules/: FindBoard.cmake  FindCIMG.cmake  FindFFMPEG.cmake  FindFftw3.cmake  FindGDI.cmake  FindM.cmake  FindMagick.cmake  FindPTHREAD.cmake
build-linux/: #CMakeCache.txt#  CMakeCache.txt  FDFLIMRepair  Makefile  abber-impact-tau  cmake_install.cmake  energy-minimum  fdflimmotion  fourier_lifetime  install_manifest.txt  lifetime  phase-abber-iccd-photon-count  phase-abber-iccd-photon-count-moving  phase-iccd-photon-count
build-linux/final-iccd-noise/: ICCDfourierRMSE.dlm  ICCDweightedRMSE.dlm
build-linux/paperFig/: locaMin.eps  locaMin.fig
build-linux/resultsICCDModel/: ICCDfourierRMSE.dlm  ICCDweightedRMSE.dlm
